# Video-Ctrl-F

./: .gitignore  Cargo.toml  Config.toml  README.md
src/: asr.rs  config.rs  disk.rs  gec.rs  indexer.rs  log.rs  main.rs  ocr.rs  preprocessing.rs  tests.rs  trie.rs  vidsplicer.rs
