[package]
name = "video-ctrl-f"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
threadpool = "1.8.1"
regex = "1"
leptess = "0.14.0"
nlprule = "0.6.4"
image = "0.24.5"
serde_json = "1.0.93"
whisper-rs = "0.5.0"
hound = "3.5.0"
stop-words = "0.7.1"